# performance-insights-2-cloudwatch

./: .Dockerfile  README.md  pyproject.toml
cli/: __main__.py  test.json
prometheus_performance_insights_exporter/: metrics_converter.py  pi_client.py  prometheus_metric.py  rds_helper.py
web_api/: main.py
