[tool.poetry]
name = "pi2cw"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
rich = "^13.7.0"
loguru = "^0.7.2"
boto3 = "^1.33.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
